--- a/charts/microservice-chart/templates/secretproviderclass.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.envSecret -}}
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
@@ -7,7 +8,6 @@ metadata:
 spec:
   provider: azure
   secretObjects:
-    # should we use just one secret?
     {{- range $key, $objectName := .Values.envSecret }}
     - secretName: {{ include "microservice-chart.fullname" $ }}
       type: Opaque
@@ -30,3 +30,4 @@ spec:
           objectType: secret
           objectVersion: ""
         {{- end }}
+{{- end }}
