--- a/charts/microservice-chart/templates/autoscaling.yaml
+++ b/charts/microservice-chart/templates/autoscaling.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.autoscaling.enable -}}
 apiVersion: keda.sh/v1alpha1
 kind: TriggerAuthentication
 metadata:
@@ -27,3 +28,4 @@ spec:
       metadata:
         {{- .metadata | toYaml | nindent 8 }}
     {{- end }}
+{{- end }}
