--- a/example/helm/values-dev.yaml
+++ b/example/helm/values-dev.yaml
@@ -39,6 +39,7 @@ microservice-chart:
       cpu: "150m"
 
   autoscaling:
+    enable: true
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
