--- a/example/helm/values-uat.yaml
+++ b/example/helm/values-uat.yaml
@@ -39,6 +39,7 @@ microservice-chart:
       cpu: "500m"
 
   autoscaling:
+    enable: false
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
