feat: Make path value mandatory

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -7,7 +7,7 @@ image:
 ingress:
   create: false
   host: ""
-  path: /(.*)
+  path: ""
   pathType: ImplementationSpecific
   forceSslRedirect: true
   rewriteTarget: /$1
