--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -5,8 +5,9 @@ image:
   port: 80
 
 ingress:
+  create: false
   host: ""
-  path: /(.*)
+  path: ""
   pathType: ImplementationSpecific
   forceSslRedirect: true
   rewriteTarget: /$1
@@ -42,6 +43,7 @@ resources:
     cpu: "150m"
 
 autoscaling:
+  enable: false
   minReplica: 1
   maxReplica: 1
   pollingInterval: 10 # seconds
