--- a/example/helm/values-dev.yaml
+++ b/example/helm/values-dev.yaml
@@ -9,7 +9,9 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
+    create: true
     host: "helm-template.ingress.devopslab.pagopa.it"
+    path: /(.*)
 
   serviceAccount:
     create: false
@@ -38,6 +40,7 @@ microservice-chart:
       cpu: "150m"
 
   autoscaling:
+    enable: true
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
