--- a/example/helm/values-prod.yaml
+++ b/example/helm/values-prod.yaml
@@ -9,7 +9,9 @@ microservice-chart:
     tag: "1.0.0"
 
   ingress:
+    create: false
     host: ""
+    path: ""
 
   serviceAccount:
     create: false
@@ -38,6 +40,7 @@ microservice-chart:
       cpu: "500m"
 
   autoscaling:
+    enable: false
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
