added flag to enable deployment and live|ready path

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -4,6 +4,11 @@ image:
   pullPolicy: Always
   port: 80
 
+deployment:
+  create: true
+  livenessProbePath: /live
+  readinessProbePath: /ready
+
 ingress:
   create: false
   host: ""
