--- a/example/helm/values-dev.yaml
+++ b/example/helm/values-dev.yaml
@@ -8,6 +8,11 @@ microservice-chart:
     tag: "1dd0109082e799bd5ee4474de2433a91d2b95fc5"
     pullPolicy: Always
 
+  deployment:
+    create: true
+    livenessProbePath: /live
+    readinessProbePath: /ready
+
   ingress:
     create: true
     host: "helm-template.ingress.devopslab.pagopa.it"
