--- a/charts/microservice-chart/templates/deployment.yaml
+++ b/charts/microservice-chart/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.deployment.create -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -37,11 +38,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /api/live
+              path: {{ .Values.deployment.livenessProbePath | default "/live" }}
               port: http
           readinessProbe:
             httpGet:
-              path: /api/ready
+              path: {{ .Values.deployment.readinessProbePath | default "/ready" }}
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
@@ -113,3 +114,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
