--- a/example/helm/values-uat.yaml
+++ b/example/helm/values-uat.yaml
@@ -8,6 +8,11 @@ microservice-chart:
     pullPolicy: Always
     tag: "1.0.0"
 
+  deployment:
+    create: true
+    livenessProbePath: /live
+    readinessProbePath: /ready
+
   ingress:
     create: false
     host: ""
