--- a/util/values.checkov.yaml
+++ b/util/values.checkov.yaml
@@ -7,6 +7,11 @@ namespace: "helm-template"
 nameOverride: ""
 fullnameOverride: ""
 
+deployment:
+  create: true
+  livenessProbePath: /live
+  readinessProbePath: /ready
+
 ingress:
   create: true
   host: "helm-template.ingress.devopslab.pagopa.it"
