--- a/charts/microservice-chart/templates/secretproviderclass.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.envSecret -}}
+{{- if and .Values.envSecret .Values.secretProviderClass.create -}}
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
