--- a/charts/microservice-chart/templates/service.yaml
+++ b/charts/microservice-chart/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.service.create -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,3 +15,4 @@ spec:
       name: http
   selector:
     {{- include "microservice-chart.selectorLabels" . | nindent 4 }}
+{{- end }}
