--- a/example/helm/values-prod.yaml
+++ b/example/helm/values-prod.yaml
@@ -7,11 +7,10 @@ microservice-chart:
     repository: ""
     pullPolicy: Always
     tag: "1.0.0"
+    port: 80
 
   deployment:
     create: true
-    livenessProbePath: /live
-    readinessProbePath: /ready
 
   ingress:
     create: false
@@ -33,6 +32,7 @@ microservice-chart:
     allowPrivilegeEscalation: false
 
   service:
+    create: true
     type: ClusterIP
     port: 80
 
@@ -55,6 +55,9 @@ microservice-chart:
   envConfig: {}
 
   envSecret: {}
+
+  secretProviderClass:
+    create: true
 
   keyvault:
     name: ""
