feat: Service and SecretProviderClass are dynamic (#44)
* minor fix

* updated checkov values

* better tls name for ingress tls

* better live and ready probes attrbites

* secret provider class now is dynamic

* service now is dynamic

* updated values for the new changes

* updated examples

* updated checkvo values

* updateds readme

--- a/util/values.checkov.yaml
+++ b/util/values.checkov.yaml
@@ -2,6 +2,7 @@ image:
   repository: dvopladneuacr.azurecr.io/templatemicroserviziok8s
   tag: "1dd0109082e799bd5ee4474de2433a91d2b95fc5"
   pullPolicy: Always
+  port: 80
 
 namespace: "helm-template"
 nameOverride: ""
