--- a/charts/microservice-chart/templates/service.yaml
+++ b/charts/microservice-chart/templates/service.yaml
@@ -12,7 +12,7 @@ spec:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
       protocol: TCP
-      name: app-port-{{ .Values.service.port }}
+      name: app-port-{{ .Values.service.port }}-svc
   selector:
     {{- include "microservice-chart.selectorLabels" . | nindent 4 }}
 {{- end }}
