--- a/charts/microservice-chart/templates/deployment.yaml
+++ b/charts/microservice-chart/templates/deployment.yaml
@@ -37,13 +37,9 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: {{ .Values.image.livenessProbePath | default "/api/live" }}
-              port: app-port-{{ .Values.service.port }}
+{{ toYaml .Values.livenessProbe | indent 12 }}
           readinessProbe:
-            httpGet:
-              path: {{ .Values.image.readinessProbePath | default "/api/ready" }}
-              port: app-port-{{ .Values.service.port }}
+{{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.envSecret }}
