--- a/examples/spring-boot-app/helm/values-dev.yaml
+++ b/examples/spring-boot-app/helm/values-dev.yaml
@@ -5,10 +5,24 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/devops-springboot-gitlab-workflow
-    tag: 0.3.0
+    tag: 0.4.0
     pullPolicy: Always
-    livenessProbePath: /app/live
-    readinessProbePath: /app/ready
+
+  livenessProbe:
+    httpGet:
+      path: /healthz/live
+      port: 8080
+    initialDelaySeconds: 60
+    failureThreshold: 6
+    periodSeconds: 10
+
+  readinessProbe:
+    httpGet:
+      path: /healthz/ready
+      port: 8080
+    initialDelaySeconds: 60
+    failureThreshold: 6
+    periodSeconds: 10
 
   deployment:
     create: true
