--- a/examples/spring-boot-app-foo/helm/values-dev.yaml
+++ b/examples/spring-boot-app-foo/helm/values-dev.yaml
@@ -5,8 +5,24 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
-    tag: 0.5.0
+    tag: 0.6.0
     pullPolicy: Always
+
+  livenessProbe:
+    httpGet:
+      path: /status/live
+      port: 8080
+    initialDelaySeconds: 60
+    failureThreshold: 6
+    periodSeconds: 10
+
+  readinessProbe:
+    httpGet:
+      path: /status/ready
+      port: 8080
+    initialDelaySeconds: 60
+    failureThreshold: 6
+    periodSeconds: 10
 
   deployment:
     create: true
