feat: Ingress secretproviderclass avoid collission (#51)

--- a/examples/spring-boot-app-bar/helm/values-dev.yaml
+++ b/examples/spring-boot-app-bar/helm/values-dev.yaml
@@ -4,9 +4,25 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: ghcr.io/pagopa/devops-springboot-gitlab-workflow
-    tag: 0.4.0
+    repository: ghcr.io/pagopa/devops-java-springboot-color
+    tag: 0.6.0
     pullPolicy: Always
+
+  livenessProbe:
+    httpGet:
+      path: /status/live
+      port: 8080
+    initialDelaySeconds: 60
+    failureThreshold: 6
+    periodSeconds: 10
+
+  readinessProbe:
+    httpGet:
+      path: /status/ready
+      port: 8080
+    initialDelaySeconds: 60
+    failureThreshold: 6
+    periodSeconds: 10
 
   deployment:
     create: true
@@ -19,7 +35,7 @@ microservice-chart:
   ingress:
     create: true
     host: "dev01.idpay.internal.dev.cstar.pagopa.it"
-    path: /idpay/test/(.*)
+    path: /idpay/testbar/(.*)
 
   serviceAccount:
     create: false
@@ -37,10 +53,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "96Mi"
+      memory: "256Mi"
       cpu: "40m"
     limits:
-      memory: "128Mi"
+      memory: "256Mi"
       cpu: "150m"
 
   autoscaling:
