--- a/charts/microservice-chart/templates/secretproviderclass-ingress-tls.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-ingress-tls.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: {{ .Values.ingress.host | replace "." "-" }}
+  name: {{ .Values.ingress.host | replace "." "-" }}-{{ include "microservice-chart.fullname" . }}
   namespace: {{ .Values.namespace }}
 spec:
   provider: azure
@@ -28,3 +28,4 @@ spec:
           objectType: secret
           objectVersion: ""
 {{- end }}
+
