--- a/examples/spring-boot-app-bar/helm/values-dev.yaml
+++ b/examples/spring-boot-app-bar/helm/values-dev.yaml
@@ -60,6 +60,7 @@ microservice-chart:
       cpu: "150m"
 
   autoscaling:
+    enable: true
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
