--- a/examples/progressing-delivery/helm/Chart.yaml
+++ b/examples/progressing-delivery/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: devops-java-springboot-color-bar
+name: progressive-delivery
 description: An example application with Java spring boot
 type: application
 version: 1.0.0
