--- a/charts/microservice-chart/templates/pd-ingress.yaml
+++ b/charts/microservice-chart/templates/pd-ingress.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.ingress.create .Values.progressiveDelivery.create -}}
+{{- if .Values.progressiveDelivery.ingress.create -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "microservice-chart.fullNameProgressiveDelivery" . }}
+  name: {{ include "microservice-chart.fullnameProgressiveDelivery" . }}
   namespace: {{ .Values.namespace }}
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
