--- a/charts/microservice-chart/templates/pd-services.yaml
+++ b/charts/microservice-chart/templates/pd-services.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.service.create .Values.progressiveDelivery.create -}}
+{{- if .Values.progressiveDelivery.service.create -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "microservice-chart.fullNameProgressiveDelivery" . }}
+  name: {{ include "microservice-chart.fullnameProgressiveDelivery" . }}
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labelsProgressiveDelivery" . | nindent 4 }}
