ingress Blue green completed

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -12,14 +12,14 @@ progressiveDelivery:
   deployment:
     create: true
     image:
-      repository: ""
-      tag: "v0.0.0"
+      repository: ghcr.io/pagopa/devops-java-springboot-color
+      tag: 0.7.1
       pullPolicy: Always
     envConfig:
+      MY_APP_COLOR: "blue"
       progressive-delivery: "ok"
     envSecret:
       aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
-
 
 image:
   repository: ""
