--- a/charts/microservice-chart/templates/pd-ingress.yaml
+++ b/charts/microservice-chart/templates/pd-ingress.yaml
@@ -12,13 +12,14 @@ metadata:
     nginx.ingress.kubernetes.io/canary: "true"
     {{- end }}
     {{- if eq .Values.progressiveDelivery.ingress.canary.type "weight" }}
-    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.progressiveDelivery.ingress.canary.percent }}
+    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.progressiveDelivery.ingress.canary.percent|quote }}
     {{- end }}
     {{- if eq .Values.progressiveDelivery.ingress.canary.type "cookie" }}
     nginx.ingress.kubernetes.io/canary-by-cookie: {{ .Values.progressiveDelivery.ingress.canary.value }}
     {{- end }}
     {{- if eq .Values.progressiveDelivery.ingress.canary.type "header" }}
-    nginx.ingress.kubernetes.io/canary-by-header-pattern: {{ .Values.progressiveDelivery.ingress.canary.pattern }}
+    nginx.ingress.kubernetes.io/canary-by-header: {{ .Values.progressiveDelivery.ingress.canary.header|quote }}
+    nginx.ingress.kubernetes.io/canary-by-header-value: {{ .Values.progressiveDelivery.ingress.canary.headerValue|quote }}
     {{- end }}
 spec:
   ingressClassName: nginx
@@ -31,8 +32,12 @@ spec:
                 name: pd-{{ include "microservice-chart.fullname" . }}
                 port:
                   number: {{ .Values.service.port }}
-            path: /pd{{ .Values.ingress.path }}
             pathType: {{ .Values.ingress.pathType }}
+            {{- if eq .Values.progressiveDelivery.ingress.canary.type "bluegreen" }}
+            path: /pd{{ .Values.ingress.path }}
+            {{- else }}
+            path: {{ .Values.ingress.path }}
+            {{- end }}
   tls:
     - hosts: [{{ .Values.ingress.host }}]
       secretName: {{ .Values.ingress.host | replace "." "-" }}
