--- a/charts/microservice-chart/templates/pd-deployment.yaml
+++ b/charts/microservice-chart/templates/pd-deployment.yaml
@@ -9,6 +9,7 @@ metadata:
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
+  replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels:
       {{- include "microservice-chart.selectorLabelsProgressiveDelivery" . | nindent 6 }}
