--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -3,17 +3,16 @@ nameOverride: ""
 fullnameOverride: ""
 
 progressiveDelivery:
+  create: true
   ingress:
     create: true
-    # canary:
-    #   type: weight
-    #   percent: 1
     # canary:
     #   type: bluegreen
     canary:
       type: header
-      header: canary
+      headerName: canary
       headerValue: pagopa
+      weightPercent: 10
   service:
     create: true
   deployment:
